@@ -1,0 +1,5 @@
+all:
+	python setup.py build
+
+install:
+	python setup.py install
